--- a/.github/workflows/xd.yml
+++ b/.github/workflows/xd.yml
@@ -13,7 +13,7 @@ jobs:
       run: |
         Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
         Invoke-WebRequest https://raw.githubusercontent.com/grokcstar/freexdasdad0000001221212/main/start.bat -OutFile start.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/grokcstar/freexdasdad0000001221212/main/images.jpeg -OutFile wallpaper.bmp
+        Invoke-WebRequest https://raw.githubusercontent.com/grokcstar/freexdasdad0000001221212/main/images.jpg -OutFile wallpaper.bmp
         Invoke-WebRequest https://raw.githubusercontent.com/grokcstar/freexdasdad0000001221212/main/wallpaper.bat -OutFile wallpaper.bat
     - name: Extract Ngrok File.
       run: Expand-Archive ngrok.zip
