--- a/.github/workflows/xd.yml
+++ b/.github/workflows/xd.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Extract Ngrok File.
       run: Expand-Archive ngrok.zip
     - name: Connect To Acc Ngrok.
-      run: .\ngrok\ngrok.exe authtoken $NGROK_AUTH_TOKEN
+      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Enabling Access RDP.
